<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.coremedia.labs.translation.gcc</groupId>
  <artifactId>gcc</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <description><![CDATA[
    This module enables support for translating content via
    GlobalLink Connect Cloud REST API. It comes with a modules like
    gcc-api which contains the REST requests and responses and
    gcc-workflow which contains the corresponding workflow.
  ]]></description>

  <modules>
    <module>apps/studio-server</module>
    <module>apps/user-changes</module>
    <module>apps/workflow-server</module>
    <module>content</module>
  </modules>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <docs.directory>${project.basedir}/docs</docs.directory>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>2.5.0</version>
          <configuration>
            <cleanLicensesOutputDirectory>true</cleanLicensesOutputDirectory>
            <errorRemedy>ignore</errorRemedy>
            <excludedGroups>^com\.coremedia\.</excludedGroups>
            <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
            <includeTransitiveDependencies>false</includeTransitiveDependencies>
            <licensesOutputFile>${docs.directory}/third-party-licenses/licenses.xml</licensesOutputFile>
            <licensesOutputDirectory>${docs.directory}/third-party-licenses</licensesOutputDirectory>
            <outputDirectory>${docs.directory}</outputDirectory>
            <sortByGroupIdAndArtifactId>true</sortByGroupIdAndArtifactId>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <rules>
              <requireMavenVersion>
                <!--
                  Align with requirements from Blueprint workspace.
                  Possibly validate via `mvn versions:display-plugin-updates`
                  regarding required minimum versions.
                -->
                <version>3.8.6</version>
              </requireMavenVersion>
              <requireJavaVersion>
                <version>[17,)</version>
              </requireJavaVersion>
            </rules>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>docs-third-party</id>
      <!--
        Will create generated resources for docs/ folder.
      -->
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>generate-docs-licenses</id>
                <goals>
                  <goal>aggregate-add-third-party</goal>
                  <goal>aggregate-download-licenses</goal>
                </goals>
                <phase>generate-resources</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
